--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
@@ -7,6 +7,14 @@
             type="text/javascript"></script>
     <script src="{{ STATIC_URL }}jquery-timepicker-addon/js/jquery-ui-timepicker-zh-CN.js"
             type="text/javascript"></script>
+    <style type="text/css">
+        .floatButton {
+            margin-right: 0px;
+            top: 50px;
+            left: 20px;
+            position: absolute;
+        }
+    </style>
 {% endblock %}
 {% block container %}
     <form class="form-horizontal" role="form" method="GET" action="/sale/dinghuo/dailywork/">
@@ -109,16 +117,22 @@
                                         {% endif %}
                                     {% endif %}
                                 </td>
-
                             </tr>
-
-
                         {% endfor %}
                     {% endif %}
                 {% endwith %}
             {% endfor %}
             </tbody>
         </table>
+    </div>
+    <div class="floatButton" style="z-index: 9999;">
+        {% if sell_well_pro %}
+            销售最多<br>
+            <img src="{{ sell_well_pro.pic_path }}" width="80px" class="img-circle"><span
+                class="badge badge-important">{{ sell_well_pro.total_sale_num }}</span><br>
+            {{ sell_well_pro.name }}<br>
+            {{ sell_well_pro.outer_id }}
+        {% endif %}
     </div>
 {% endblock %}
 
@@ -136,6 +150,12 @@
             $("#show_datepicker").datetimepicker({
                 timeFormat: "HH:mm:ss",
                 dateFormat: "yy-mm-dd"
+            });
+
+            $(window).scroll(function () {
+                var w_height = $(window).height();//浏览器高度
+                var scroll_top = $(document).scrollTop();//滚动条到顶部的垂直高度
+                $(".floatButton").css("position", "fixed");
             });
         });
         function changememo(sku_id) {
