rm prod settings.py

--- a/shopmanager/flashsale/pay/templates/pay/mprofile.html
+++ b/shopmanager/flashsale/pay/templates/pay/mprofile.html
@@ -71,7 +71,7 @@
 {% block container %}
 <div class="container-fluid">
 <div class="row">
-<div id="header"><img src="/static/images/title.png"></div>
+<div id="header"><img src="/static/images/title.jpg"></div>
 </div>
 
 <div class="row " role="navigation" >
