--- a/shopmanager/flashsale/pay/templates/pay/order_flash.html
+++ b/shopmanager/flashsale/pay/templates/pay/order_flash.html
@@ -22,7 +22,6 @@
   </head>
   
   <body>
-  
     <div class="container" style="margin-top:20px" >
     <div class="row">
     
@@ -47,7 +46,7 @@
       <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
           <a class="navbar-brand" href="/mm/order_flashsale/">
-            全部订单
+            当天所有订单
           </a>
           <a class="navbar-brand" href="#"   class="yanse">
           </a>
