[xlmm][flashsale][dinghuo] add modify

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
@@ -6,7 +6,7 @@
         @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
         @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css";
     </style>
-
+    <script src="{{ STATIC_URL }}layer-v1.9.2/layer/layer.js"></script>
 
     <script type="text/javascript">
         function changestatus(id, button) {
@@ -144,6 +144,21 @@
                         }, 'json');
             })
         });
+        function showlayer(url) {
+            url = '/sale/dinghuo/detail/' + url;
+            layer.open({
+                type: 2,
+                title: '大货修改页',
+                shadeClose: true,
+                shade: 0.8,
+                maxmin: true,
+                area: ['800px', '600px'],
+                content: url,
+                end: function () {
+                    window.location.reload();
+                }
+            });
+        }
     </script>
 {% endblock %}
 {% block container %}
@@ -203,12 +218,16 @@
             </div>
         </div>
     </div>
+    <input class="btn btn-info" type="button" onclick="showlayer({{ orderlist.id }})" value="点我修改订单">
     {% if flagofstatus %}
         <div class="row" style="text-align: right">
             <div class="col-lg-4"></div>
             <div class="col-lg-4"></div>
-            <div class="col-lg-4"><input type="button" class="btn btn-danger" id="zuofeibutton" value="作废"
-                                         onclick="changestatus({{ orderlist.id }},this)"></div>
+            <div class="col-lg-4">
+                <input type="button" class="btn btn-danger" id="zuofeibutton" value="作废"
+                       onclick="changestatus({{ orderlist.id }},this)">
+
+            </div>
         </div>
     {% elif flagofquestion %}
         <hr>
