--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/orderdetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/orderdetail.html
@@ -1,17 +1,6 @@
 {% extends "dinghuo/dinghuo_base.html" %}
 {% block title %}订单详情页{% endblock %}
 {% block head_script %}
-    <link href='{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css' rel='stylesheet'/>
-    <style type="text/css" title="currentStyle">
-        @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
-        @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css";
-    </style>
-    <style type="text/css">
-        tfoot input {
-            width: 50%;
-        }
-    </style>
-
     <script type="text/javascript">
         function changestatus(id, button) {
             var url = "/sale/dinghuo/changestatus/";
@@ -32,137 +21,89 @@
                 $.ajax({url: url, data: data, type: "post", success: callback});
             }
         }
+        function closefunction() {
+            var index = parent.layer.getFrameIndex(window.name); //获取当前窗体索引
+            {#            $('#提交的元素').on('click', function () {#}
+            parent.layer.close(index); //执行关闭
+            {#            });#}
+        }
+        function savefunction() {
+            console.log("fdfdfdfdf");
+            var index = parent.layer.getFrameIndex(window.name);
+            var receiver = $("#receiver_id").val();
+            var orderlistid = $("#orderlistid").val();
+            var supplier_name = $("#supplier_name_id").val();
+            var express_company = $("#express_company_id").val();
+            var express_no = $("#express_no_id").val();
+            var note = $("#note_id").val();
+            var order_amount = $("#order_amount_id").val();
+            if (order_amount.length < 0 || isNaN(order_amount)) {
+                alert("金额填错");
+            } else {
+                var url = "/sale/dinghuo/changeorderlist/";
+                var data = {
+                    "receiver": receiver,
+                    "orderlistid": orderlistid,
+                    "supplier_name": supplier_name,
+                    "express_company": express_company,
+                    "express_no": express_no,
+                    "note": note,
+                    "order_amount": order_amount
+                };
 
+                var callback = function (res) {
+                    if (res == "OK") {
+                        parent.layer.close(index); //执行关闭
+                    } else if (res = "False") {
+                        alert("更新错误");
+                    }
+                };
+                $.ajax({url: url, data: data, type: "post", success: callback});
+            }
+        }
 
     </script>
 {% endblock %}
 {% block container %}
-    <div class="container">
-        <div class="row" style="margin-top: 20px">
-            <div class="col-lg-6">
-                <span class="label label-info" style="font-size: 30px">当前状态：</span>
-                <label id="order_status" class="label label-success"
-                       style="font-size: large">{{ orderlist.status }}</label>
-            </div>
-            <div class="col-lg-4"></div>
-            <div class="col-lg-2">
-                <a href="/admin/items/product" style="text-align: right">
-                    <span class="label label-info" style="font-size: 20px">回到商品页面</span>
-                </a>
-            </div>
-        </div>
-        <div class="row" style="margin-top: 20px">
 
-            <div class="col-lg-4">
-                <div class="alert alert-success" role="alert">
-                    <strong>填写地址:</strong>上海市佘山镇吉业路245号5号楼_{{ orderlist.id }}室
-                </div>
-            </div>
+    <div class="input-group span9" style="margin-top: 50px">
+        <span class="input-group-addon"><strong>大货负责人:</strong></span>
+        <input id="orderlistid" value="{{ orderlist.id }}" hidden="hidden">
+        <input type="text" id="receiver_id" class="form-control"
+               value="{{ orderlist.receiver }}">
+    </div>
+    <div class="input-group span9" style="margin-top: 20px">
+        <span class="input-group-addon"><strong>供 应 商:</strong></span>
+        <input type="text" id="supplier_name_id" class="form-control"
+               value="{{ orderlist.supplier_name }}">
+    </div>
+    <div class="input-group span9" style="margin-top: 20px">
+        <span class="input-group-addon"><strong>快递公司:</strong></span>
+        <input type="text" id="express_company_id" class="form-control"
+               value="{{ orderlist.express_company }}">
+    </div>
+    <div class="input-group span9" style="margin-top: 20px">
+        <span class="input-group-addon"><strong>快递单号:</strong></span>
+        <input type="text" id="express_no_id" class="form-control"
+               value="{{ orderlist.express_no }}">
+    </div>
+    <div class="input-group span9" style="margin-top: 20px">
+        <span class="input-group-addon"><strong>总金额:</strong></span>
+        <input type="text" min="0" id="order_amount_id" class="form-control"
+               value="{{ orderlist.order_amount }}">
+    </div>
+    <div class="input-group span9" style="margin-top: 20px">
+        <span class="input-group-addon"><strong>备注:</strong></span>
+        <textarea class="form-control" id="note_id" rows="3"></textarea>
+    </div>
 
-            <div class="col-lg-4">
-                <div class="alert alert-success" role="alert">
-                    <strong>收 货 人:</strong>{{ orderlist.receiver }}
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="alert alert-success" role="alert">
-                    <strong>供 应 商:</strong>{{ orderlist.supplier_name }}
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="alert alert-success" role="alert">
-                    <strong>快递公司:</strong>{{ orderlist.express_company }}
-                </div>
-            </div>
 
-            <div class="col-lg-4">
-                <div class="alert alert-success" role="alert">
-                    <strong>快递单号:</strong>{{ orderlist.express_no }}
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="alert alert-success" role="alert">
-                    <strong>金额:</strong>{{ orderlist.order_amount }}
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4"></div>
-            <div class="col-lg-4"></div>
-            <div class="col-lg-4" style="text-align: right">
-                <input type="button" class="btn btn-info" id="shenhebutton" value="审核"
-                       onclick="changestatus({{ orderlist.id }},this)">
-                <input type="button" class="btn btn-danger" id="zuofeibutton" value="作废"
-                       onclick="changestatus({{ orderlist.id }},this)">
-            </div>
-
-        </div>
-        <div class="row">
-
-            <legend>
-                <h2 class="head-title">详细列表</h2>
-            </legend>
-        </div>
-        <div>
-            <table id="orderdetailtable" border="1" class="table table-striped table-bordered table-hover">
-                <thead>
-                <td width="100px">商品编码</td>
-                <td width="100px">商品名称</td>
-                <td width="100px">规格</td>
-                <td width="100px">数量</td>
-                <td width="100px">买入价格</td>
-                <td width="100px">单项价格</td>
-                </thead>
-                <tbody>
-                {% for order in orderdetails %}
-                    <tr id="draft_{{ forloop.counter }}">
-                        <td>{{ order.outer_id }}</td>
-                        <td>{{ order.product_name }}</td>
-                        <td>{{ order.product_chicun }}</td>
-                        <td>
-                            <span id="quantity_{{ order.id }}">{{ order.buy_quantity }}</span>
-                        </td>
-                        <td>{{ order.buy_unitprice }}</td>
-                        <td>¥{{ order.total_price }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
+    <div class="row" style="text-align: right">
+        <input type="button" class="btn btn-info" value="保存"
+               onclick="savefunction()">
+        <input type="button" class="btn btn-danger" value="取消"
+               onclick="closefunction()">
     </div>
 {% endblock %}
 {% block tail_script %}
-    <script src="{{ STATIC_URL }}jquery/jquery-2.1.1.min.js"></script>
-    <script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        $('#orderdetailtable').dataTable({
-            //"bJQueryUI": true,
-            "bAutoWidth": false, //自适应宽度
-            "aaSorting": [[1, "asc"]],
-            "iDisplayLength": 50,
-            "aLengthMenu": [[20, 50, 100, -1], [20, 50, 100, "All"]],
-            //"bInfo":true,
-            //"sPaginationType": "full_numbers",
-            //"sDom": '<"H"Tfr>t<"F"ip>',
-            "oLanguage": {
-                "sLengthMenu": "每页 _MENU_ 条",
-                "sZeroRecords": "抱歉， 没有找到",
-                "sInfo": "从 _START_ 到 _END_ /共 _TOTAL_ 条",
-                "sInfoEmpty": "没有数据",
-                "sSearch": "搜索",
-                "sInfoFiltered": "(从 _MAX_ 条数据中检索)",
-                "oPaginate": {
-                    "sFirst": "首页",
-                    "sPrevious": "前一页",
-                    "sNext": "后一页",
-                    "sLast": "尾页"
-                },
-                "sZeroRecords": "没有检索到数据",
-                "sProcessing": "<img src='/static/img/loading.gif' />"
-            }
-        });
-
-    </script>
 {% endblock %}
