--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
@@ -51,6 +51,8 @@
                 var callback = function (res) {
                     if (res == "OK") {
                         p.text(parseInt(p.text()) - 1);
+                    }else if (res == "deleted"){
+                        window.location.reload();
                     }
                 };
                 $.ajax({url: url, data: data, type: "post", success: callback});
