fix flashsale pay and asynctask template

--- a/shopmanager/flashsale/pay/templates/pay/mrefundapply.html
+++ b/shopmanager/flashsale/pay/templates/pay/mrefundapply.html
@@ -95,10 +95,12 @@
 		    <label for="selectReason31" class="control-label">退款原因：</label>
 		    <select id="selectReason31" name="reason" required="required" class="form-control">
 			  <option value="">请选择退款理由</option>
-			  <option value="2">2</option>
-			  <option value="3">3</option>
-			  <option value="4">4</option>
-			  <option value="5">5</option>
+			  <option value="1">退运费</option>
+			  <option value="2">收到商品破损</option>
+			  <option value="3">商品错发/漏发</option>
+			  <option value="4">商品需要维修</option>
+			  <option value="5">发票问题</option>
+			  <option value="6">商品与描述不符</option>
 			</select>
 		  </div>
 		  <div class="form-group ">
@@ -127,11 +129,12 @@
 		    <label for="selectReason32" class="control-label">退货原因：</label>
 		      <select id="selectReason32" name="reason" required = "required" class="form-control">
 		      	  <option value="">提示：请确保商品包装完好再申请退货</option>
-				  <option value="1">1</option>
-				  <option value="2">2</option>
-				  <option value="3">3</option>
-				  <option value="4">4</option>
-				  <option value="5">5</option>
+				  <option value="1">退运费</option>
+				  <option value="2">收到商品破损</option>
+				  <option value="3">商品错发/漏发</option>
+				  <option value="4">商品需要维修</option>
+				  <option value="5">发票问题</option>
+				  <option value="6">商品与描述不符</option>
 			  </select>
 		  </div>
 		  <div class="form-group ">
