fix flashsale pay

--- a/shopmanager/flashsale/pay/templates/pay/morder.html
+++ b/shopmanager/flashsale/pay/templates/pay/morder.html
@@ -37,6 +37,7 @@
 
 {% block preload_script %}
 <script src="{{ STATIC_URL }}script/pingpp_pay.js"></script>
+<script src="{{ STATIC_URL }}script/pingpp_ap.js"></script>
 {% endblock %}
 
 {% block container %}
