--- a/shopmanager/flashsale/pay/templates/pay/mlogin.html
+++ b/shopmanager/flashsale/pay/templates/pay/mlogin.html
@@ -23,7 +23,7 @@
     </div>
     <div class="row" style="text-align:center;font-size:18px;margin:0 5px;padding:10px 10px;color:#b3b3b3;"><p>如您已注册会员，请直接登录</p></div>
     <div class="row" >
-      <form class="form-horizontal" action="{% url flashsale_login %}" method="post">
+      <form id="login-form" class="form-horizontal" action="{% url flashsale_login %}" method="post">
       {% csrf_token %}
 	  <div class="form-group">
 	    <div class="col-xs-offset-1 col-xs-10">
@@ -73,8 +73,9 @@
       $(function () {
         $("#btnNewVerityCode").click(function () {
           $("#verityCode").attr("src", "/User/LoginVerityCode?s=s&r=" + Math.random());
+      	});
       });
-      });
+      
     </script>
   </body>
 </html>
