--- a/shopmanager/flashsale/pay/templates/pay/pay.html
+++ b/shopmanager/flashsale/pay/templates/pay/pay.html
@@ -141,7 +141,7 @@
                 if (reg.test(url)) return RegExp.$2.replace(/\+/g, " ");
             };
             var param = getQueryString(location.href, 'goto') || '';
-            location.href = param != '' ? _AP.decode(param) : '../pay.htm#error';
+            location.href = param != '' ? _AP.decode(param) : 'pay.htm#error';
         }
     }
 </script>
