--- a/shopmanager/flashsale/pay/templates/pay/order_flash.html
+++ b/shopmanager/flashsale/pay/templates/pay/order_flash.html
@@ -243,7 +243,7 @@
       <label for="firstname" class="col-sm-2 control-label">查询</label>
       <div class="col-sm-10">
          <input type="text" class="form-control" id="condition" name="condition" 
-            placeholder="查询条件（例如：订单号，手机号码，电话号码，用户昵称,快递编号）">
+            placeholder="查询条件（例如：订单号，手机号码，电话号码，用户昵称,物流编号）">
             <button type="submit" class="btn btn-warning">点击查询</button>
       </div>
    </div>
